syntax = "proto3";

option csharp_namespace = "Auth";
option java_package = "com.example.labapi";
package auth;

message RequestAuth {
    string name = 1;
}

message ResponseAuth {
    bool authenticated = 1;
}

service AuthService {
    rpc Auth (RequestAuth) returns (ResponseAuth);
}